让exec更安全